2005-03-31 1.2.21 Jeekay
* Remove need to manually type $*.org in global notices
* Change 850 to 'Assistant Manager' and 800 to 'Supervisor'
* Bumped version to 1.2.21

2004-12-02 1.2.20 Jeekay
* Added a space after INVISIBLE flag in STATUS
* Add subjects to global notices to allow users to selectively filter them
* Renamed GLOBNOTICE to GLOBALNOTICE and introduced CS subject
* Fix P HELP to point to correct URL for commands
* Bumped version to 1.2.20

2004-11-20 1.2.19 Jeekay
* Changed SPECIAL to NOPART
* Added invisible levels
* Bumped version to 1.2.19

2004-09-28 1.2.18 Jeekay
* Change INFO so only the user/csc/opers can see if a user is globally suspended
* Added PARTNER channel flag
* Lower SET (nopurge|special) from 850 to *800
* Added command domain for commands affecting admins - A2
* Split out levels for (add|mod|rem)user(id)?
* Lower ADDUSER and MODUSER * from *850 to *800
* Bumped version to 1.2.18

2004-08-19 1.2.17 Jeekay
* Changed auto-idle-part message to be a bit more useful to users
* Moved auto-idle part time into configuration file & bumped from 2d to 7d
* Bumped version to 1.2.17

2004-04-22 1.2.16 Jeekay
* Handle bans of hidden hosts properly
* Allow users to either accept or reject notes from a set of users
* Fix handling of +T on burst
* UPDATES
* Remove #coder-com verifies
* Changed format of failed login log to clarify what is what
* Bumped version to 1.2.16

2004-01-25 1.2.15 Jeekay
* Removed OutputFlood code as it only ever affected bots
* Bumped version to 1.2.15

2003-11-28 1.2.14 Jeekay
* Prevent channels with COMMENT or LOCKED from being purged
* Bumped version to 1.2.14

2003-11-08 1.2.13 Jeekay
* Fixed spurious RECOVER messages
* Fixed core when a user was serveropped and globally suspended
* Changed all references from `memo' to `note'
* Bumped version to 1.2.13

2003-10-10 1.2.12 Jeekay
* Removed LISTEN events
* Respect sql_pass if given
* Added INVISIBLE to list of flags shown for users